--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="peiSofit">"ף"</string>
     <string name="cafSofit">"ך"</string>
     <string name="tzadickSofit">"ץ"</string>
+    <string name="canon">"תותח!!!"</string>
+
 </resources>
