print playing facebook friends + simple leaderboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="shareMessage1">עברתי בהצלחה את שלב</string>
     <string name="shareMessage2"> !\n הצטרפו גם אתם לפתרון חידות ההצפנה!</string>
     <string name="shareMessageFinish"> \nעברתי בהצלחה את כל השלבים באתגר אתב"ש </string>
+    <string name="cannotShowLeaderboards"> על מנת לצפות בטבלת השיאים עליך להיות מחובר לפייסבוק. </string>
+
 </resources>
