facebook functions partially working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="stage">שלב</string>
     <string name="facebookSuccess">מחובר לפייסבוק</string>
+    <string name="ok">אישור</string>
 
 </resources>
