--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="noStages">אין שלבים במאגר השאלות. בדוק את החיבור לאינטרנט ונסה שוב מאוחר יותר.</string>
     <string name="instructions">הוראות</string>
     <string name="failedLoadingLeaderboards">אין אפשרות לקבל רשימת חברים</string>
-    <string name="basic_text1">שלום לכל המשתמשים\n בכל שלב תוצג לכם חידה שהתשובה לה מוצפנת\nהמטרה שלכם היא לפצח את ההצפנה\nאם אתם מתקשים תשתמשו בכפתור הרמז שיעזור לכם לגלות את סוג ההצפנה\nתודה על שהתקנתם את המשחק\n\nקרדיטים\nתודה להורינו שהביאונו עד הלום\nלמנטור התותח שלנו רן הנסיך הקטן טיבי\nלמדריך הכי טוב בארץ מיכאל ויינר\nלכיתה יב 5 שהיו שותפים איתנו לתהליך\nוכמובן לגוגל שברא לנו את stack overflow \t\tשלא היינו מסתדרים בלעדיהם</string>
+    <string name="basic_text1">שלום לכל המשתמשים\n בכל שלב תוצג לכם חידה שהתשובה לה מוצפנת\nהמטרה שלכם היא לפצח את ההצפנה\nאם אתם מתקשים תשתמשו בכפתור הרמז שיעזור לכם לגלות את סוג ההצפנה\nתודה על שהתקנתם את המשחק\n\nקרדיטים\nתודה להורינו שהביאונו עד הלום\nלמנטור התותח שלנו רן הנסיך הקטן טיבי\nלמדריך הכי טוב בארץ מיכאל ויינר\nלכיתה יב 5 שהיו שותפים איתנו לתהליך\nוכמובן לגוגל שברא לנו את stack overflow \t\tשלא היינו מסתדרים בלעדיהם\n\n מודים לכולם ואחד לשני, נעם בר שלמה ודרור שטר, יוצרי המשחק</string>
+    <string name="backToMainMenuAfterFinishAllLevels">חזרה לתפריט הראשי</string>
 </resources>
